fixed carousel button spacing on large mobile for 768 media query

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -661,10 +661,10 @@ aside button:hover, .projectDetails:hover{
 		margin-top: 24rem;
 	}
 	.carouselLeftNav{
-		margin-right: -12rem;
+		margin-right: -10.5rem;
 	}
 	.carouselRightButton {
-		margin-left: -12rem;
+		margin-left: -10.5rem;
 	}
 	nav{
 		display: block;
